src/test/deca/syntax/invalid/decaObjet/cast/03missingCParentVar.deca
// Description:
// Test d'un cast avec la parenthèse fermante manquante pour la variable du cast 
//
// Resultats:
//  03missingCParentVar.deca:18:20: 
//
// Historique:
//    crée le 16/06/2022
class Point2D {     
    int x; // Abscisse     
    int y; // Ordonnee      
} 
class Point3D extends Point2D {     
    int z; // Hauteur      
}  
{             
    Point3D p = null;         
    p = (Point2D) (p;     
}